--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         " />
         <meta name="keywords" content="AeduZ, Personalized mentorship, JEE, NEET, General competition, Confidence, Resilience, Educational goals, Hassle-free study experiences, 1:1 mentorship session, Unlock potential, Institutions, Register, IITian, NITian, Medical support, Contact us, Grievance">
         <meta name="author" content="" />
-        <title>AdeuZ </title>
+        <title>AeduZ | Home Page </title>
         
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -389,9 +389,9 @@ Insight into student challenges and needs
                             <img class="mx-auto rounded-circle" src="{% static 'assets/img/team/dhananjay.jpeg' %} " alt="..." />
                             <h4>Dhananjay Kumar</h4>
                             <p class="text-muted">"The compassionate mentor, lighting path for students to achieve their dreams"</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a> -->
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/dhananjay-kumar-1531a0211/" target="_blank" aria-label="Dhananjay LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3">
@@ -401,9 +401,9 @@ Insight into student challenges and needs
                             <br>
                             <p class="text-muted">"Burning fire inside aspirants"</p>
                             <br>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a> -->
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/aditya-%E2%80%8E-05956a201/" target="_blank" aria-label="Aditya Malhotra LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3">
@@ -411,10 +411,10 @@ Insight into student challenges and needs
                             <img class="mx-auto rounded-circle" src="{% static 'assets/img/team/shubham.jpg' %} " alt="..." />
                             <h4>Shubham Jadhav</h4>
                             <br>
-                            <p class="text-muted">"Aeduz connects future IITians with IITians"</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <p class="text-muted">"AeduZ connects future IITians with IITians"</p>
+                            <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a> -->
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/shubham-jadhav-281222222/" target="_blank" aria-label="Shubham Jadhav LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3    ">
@@ -423,9 +423,9 @@ Insight into student challenges and needs
                             <h4>Akshat Jain</h4>
                             <br>
                             <p class="text-muted">"Solving aspirant's problems with our experience and infrastructure"</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a> -->
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/akshat-jain-03809a1ba/" target='_blank' aria-label="Akshat Jain LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
@@ -467,26 +467,25 @@ Insight into student challenges and needs
                         <div class="col-md-6">
                             <div class="form-group">
                                 <!-- Name input-->
-                                <input class="form-control"  name="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
-                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                                <input class="form-control"  name="name" type="text" placeholder="Your Name *" required />
+                              
                             </div>
                             <div class="form-group">
                                 <!-- Email address input-->
-                                <input class="form-control"  name="email" type="email" placeholder="Your Email *" data-sb-validations="required,email" />
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                                <input class="form-control"  name="email" type="email" placeholder="Your Email *" required />
+                            
                             </div>
                             <div class="form-group mb-md-0">
                                 <!-- Phone number input-->
-                                <input class="form-control" name="tel"  type="tel" placeholder="Your Phone *" data-sb-validations="required" />
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                                <input class="form-control" name="tel"  type="tel" placeholder="Your Phone *" required/>
+                                
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group form-group-textarea mb-md-0">
                                 <!-- Message input-->
-                                <textarea class="form-control" name="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                                <textarea class="form-control" name="message" placeholder="Your Message *" required ></textarea>
+                                
                             </div>
                         </div>
                     </div>
@@ -504,13 +503,13 @@ Insight into student challenges and needs
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; AeduZ Team 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        {% comment %} <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a> {% endcomment %}
+                        {% comment %} <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a> {% endcomment %}
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/aeduz/" target='_blank' aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                        {% comment %} <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
+                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a> {% endcomment %}
                     </div>
                 </div>
             </div>
@@ -541,16 +540,19 @@ Insight into student challenges and needs
             </div>
   
             <div class="mb-3">
-              <label for="whatsNo" class="form-label">Coaching Name</label>
+              <label for="whatsNo" class="form-label">Institute (JEE Coaching)</label>
               <input type="text" class="form-control" id="whatsNo" name="coaching"  required>
             </div>
   
             <div class="mb-3">
                 <label for="yearOfStudy" class="form-label">Year of Study</label>
-                <select class="form-select" id="yearOfStudy" name="yearOfStudy">
-                    <option value="11th">11th</option>
-                    <option value="12th">12th</option>
-                    <option value="drop">Drop Year</option>
+                <select class="form-select" id="yearOfStudy" name="yearOfStudy" required>
+                    <option value="1st">1st year</option>
+                    <option value="2nd">2nd year</option>
+                    <option value="3rd">3rd year </option>
+                    <option value="4th">4th year </option>
+                    <option value="Dual Degree">Dual Degree</option>
+
                 </select>
             </div>
     
