--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">About Us</a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Book 1:1 Call</a></li> -->
-                        <!-- <li class="nav-item"><a class="nav-link" href="#about">Why AeduB?</a></li> -->
+                        <!-- <li class="nav-item"><a class="nav-link" href="#about">Why AeduZ?</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="/institutes">Institutions </a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
@@ -96,7 +96,7 @@
                     
                     Guiding DREAMS Unlocking POTENTIAL
                 </div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Book 1:1 Call</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="https://koalendar.com/e/meet-with-aeduz">Book 1:1 Call</a>
             </div>
         </header>
        
@@ -116,7 +116,7 @@
                                 <h4 class="subheading">Who Are We?</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
-AeduB is your premier destination for personalized mentorship. Through our innovative platform & network of experienced mentors, we empower the students, filled them with confidence & resilience to overcome challenges & achieve their educational goals.
+AeduZ is your premier destination for personalized mentorship. Through our innovative platform & network of experienced mentors, we empower the students, filled them with confidence & resilience to overcome challenges & achieve their educational goals.
                             </p></div>
                         </div>
                     </li>
@@ -149,7 +149,7 @@ AeduB is your premier destination for personalized mentorship. Through our innov
                                 </h2>
                                 <p>
 
-                                    You can talk to our customer service through WhatsApp icon on right-bottom or through mail at aeduz.queries@gmail.com.
+                                    You can talk to our customer service through WhatsApp icon on right-bottom or through mail at <strong><a href=mailto:team@aeduz.com>team@aeduz.com</a></strong>.
                                 </p>
                             </div>
                             <div class="col-md-6">
@@ -349,7 +349,7 @@ AeduB is your premier destination for personalized mentorship. Through our innov
         <div class="container">
         <div class="row">
         <div class="col-md-6">
-        <h2>BENEFITS for IITians after becoming AeduB MENTORS</h2>
+        <h2>BENEFITS for IITians after becoming AeduZ MENTORS</h2>
         </div>
         <div class="col-md-6">
 
@@ -508,8 +508,9 @@ Insight into student challenges and needs
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/aeduz/" target='_blank' aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
-                        {% comment %} <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a> {% endcomment %}
+			
+                        <a class="link-dark text-decoration-none me-3" href="privacypolicy">Privacy Policy</a>
+                        <a class="link-dark text-decoration-none" href="/termsofservice">Terms of Service</a>
                     </div>
                 </div>
             </div>
