--- a/templates/institute.html
+++ b/templates/institute.html
@@ -41,7 +41,7 @@
                   <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                       <li class="nav-item"><a class="nav-link" href="/#services">About Us</a></li>
                       <li class="nav-item"><a class="nav-link" href="/#portfolio">Book 1:1 Call</a></li>
-                      <li class="nav-item"><a class="nav-link" href="/#about">Why Eduwayy?</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/#about">Why AeduZ ?</a></li>
                       <li class="nav-item"><a class="nav-link" href="/institutes">Institutions </a></li>
                       <li class="nav-item"><a class="nav-link" href="/#team">Team</a></li>
                       <li class="nav-item"><a class="nav-link" href="/#contact">Contact Us</a></li>
@@ -149,7 +149,7 @@
                     <span class="text-muted"><i class="icon-fa fas fa-cogs fa-2x"></i></span>
                   </div>
                   <div class="media-body">
-                    <h6 class="font-weight-bold">Positive Impace</h6>
+                    <h6 class="font-weight-bold">Positive Impact</h6>
                     <p class="text-muted">Improve student performance and well-being through our personalized support and mentorship</p>
                   </div>
                 </div>
@@ -256,10 +256,12 @@
                       {% comment %} <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a> {% endcomment %}
                       <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/aeduz/" target='_blank' aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                   </div>
-                  <div class="col-lg-4 text-lg-end">
-                      {% comment %} <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                      <a class="link-dark text-decoration-none" href="#!">Terms of Use</a> {% endcomment %}
-                  </div>
+<div class="col-lg-4 text-lg-end">
+
+                        <a class="link-dark text-decoration-none me-3" href="privacypolicy">Privacy Policy</a>
+                        <a class="link-dark text-decoration-none" href="/termsofservice">Terms of Service</a>
+                    </div>
+                  
               </div>
           </div>
       </footer>
