--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,7 +26,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top " style="position: relative;" id="mainNav">
           <div class="container">
             <a class="navbar-brand" href="/"><img src="{% static 'aeduz_transparent.png' %} " style="width:120px;height:90px;" alt="..." /></a>
               {% comment %} <a class="navbar-brand" href="#page-top"><img src="{% static 'aeduz_logo1.png' %} " alt="..." /></a> {% endcomment %}
@@ -46,10 +46,18 @@
               </div>
           </div>
       </nav>
-        <br><br><br><br><br>
+       
 
-        <h1>Dashboard ! {{user.email}}</h1>
-        <h2></h2>
+        {% if mentee_update %}
+        <div class="alert alert-success alert-dismissible fade show " role="alert">
+            <strong>To book a session, please update your profile first !</strong> 
+            <button type="button" class="btn btn-primary btn-lg" data-bs-toggle= "modal" data-bs-target = "#staticBackdrop_update">
+                Update Profile
+              </button> </strong> 
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endif %}
+       
         <section class="fdb-block">
             <div class="container">
                 <div class="row align-items-center">
@@ -67,6 +75,93 @@
                         {% else %}
                             <h1 style="color: rgb(127, 35, 35);">Not verified {{ institute_info.name }}</h1>
                         {% endif %}
+                        
+                    {% elif mentee_update %}
+
+                    <div class="col-md-3 p-2" style='border:2px red solid;border-radius: 10px;'>
+                        <div class="mb-3">
+                            <h4>Name</h4>
+                            <p> -   </p>
+                        </div>
+                        <div class="mb-3">
+                            <h4>Email address</h4>
+                            <p>{{user.email}}</p>
+                        </div>
+                        <div class="mb-3">
+                            <h4>Contact</h4>
+                            <p> - </p>
+                        </div>
+                        <div class="mb-3">
+                            <h4>Exam Year</h4>
+                            <p> - </p>
+                        </div>
+                    </div>
+        
+                    
+                    
+                    {% else %}
+
+                    
+                    
+                    <div class="col-md-3 offset-md-3 p-2" style='border:2px red solid;border-radius: 10px;'>
+                        
+                        <div class="mb-3">
+                            <h4>Name</h4>
+                            <p> {{mentee_info.name}}</p>
+                        </div>
+                        <div class="mb-3">
+                            <h4>Email address</h4>
+                            <p>{{user.email}}</p>
+                        </div>
+                        <div class="mb-3">
+                            <h4>Contact</h4>
+                            <p> {{mentee_info.contact}} </p>
+                        </div>
+                        <div class="mb-3">
+                            <h4>Coaching Name</h4>
+                            <p> {{mentee_info.coaching}} </p>
+                        </div>
+                        <div class="mb-3">
+                            <h4>Exam Year</h4>
+                            <p> {{mentee_info.year_of_study}} </p>
+                        </div>
+                        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle= "modal" data-bs-target = "#staticBackdrop_update">
+                            Update Profile
+                          </button> 
+                    </div>
+
+                    <div class="col-md-3">
+                        <a  href="/booking" type="button"  class="btn btn-primary btn-lg" style="background-color: rgb(58, 93, 93);" >
+                            Book 1:1 session
+                          </a> 
+                    </div>
+                    
+
+                    <div class="container my-3">
+                        <center>
+
+                            <h2>Appointments Dashboard</h2>
+                        </center>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Time Slot</th>
+                                    <th>Completed</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for appointment in appointments %}
+                                <tr>
+                                    <td>{{ appointment.date }}</td>
+                                    <td>{{ appointment.timeslot }}</td>
+                                    <td>{% if appointment.completed %}Yes{% else %}No{% endif %}</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+
                     {% endif %}
                 </div>
             </div>
@@ -83,9 +178,10 @@
                     <h1 style="color: rgb(35 127 83);">Institutions</h1>
                     {% endif %}
                 </div>
-              <div class="col-12 col-md-8 m-auto ml-lg-auto mr-lg-0 col-lg-6 pt-5 pt-lg-0">
+
+              {% comment %} <div class="col-12 col-md-8 m-auto ml-lg-auto mr-lg-0 col-lg-6 pt-5 pt-lg-0">
                 <img alt="image" class="img-fluid" src="{% static 'insti.png'%}">
-              </div>
+              </div> {% endcomment %}
             </div>
           </div>
         </section>
@@ -115,16 +211,74 @@
                 </div>
             </div>
         </footer>
-        <!-- Portfolio Modals-->
+        <!-- update form Modals-->
+
+
+        <div class="modal fade text-black" id="staticBackdrop_update" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="staticBackdropLabel">Register</h5>
+                </div>
+                <div class="modal-body">
+                  <form action="/mentee_reg" method="post"> {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="colName" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="colName" name="name"  required>
+                    </div>
+          
+                    <div class="mb-3">
+                      <label for="state" class="form-label">Personal Email ID</label>
+                      <input type="email" class="form-control" id="state" name="email" value="{{ user.email }}" readonly>
+                    </div>
+          
+                    <div class="mb-3">
+                      <label for="phoneNo" class="form-label">Contact No. </label>
+                      <input type="number" class="form-control" id="phoneNo" name="contact"  required>
+                    </div>
+          
+                    <div class="mb-3">
+                      <label for="whatsNo" class="form-label">Institute (JEE Coaching)</label>
+                      <input type="text" class="form-control" id="whatsNo" name="coaching"  required>
+                    </div>
+          
+                    <div class="mb-3">
+                        <label for="yearOfStudy" class="form-label">Year of Study</label>
+                        <select class="form-select" id="yearOfStudy" name="yearOfStudy" required>
+                            <option value="11th">11th</option>
+                            <option value="12th">12th</option>
+                            <option value="Drop Year">Drop Year </option>
+                          
+        
+                        </select>
+                    </div>
+            
+            
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="submit" class="btn btn-success">Update</button>
+                  </form>
+                </div>    
+                      
+               </div>
+                </div>
+                </div>
+
+
+
+
+
+
+
+
+
        
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'js/scripts.js' %}"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+       
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 
